--- a/yatube/templates/includes/header.html
+++ b/yatube/templates/includes/header.html
@@ -1,34 +1,49 @@
 {% load static %}
-<nav class="navbar navbar-light" style="background-color: lightskyblue">
-  <div class="container">
-    <div>
-      <!-- ссылка должна вести на главную страницу -->
-      <a class="navbar-brand" href="{% url "posts:index" %}">
-        <img src="{% static "img/logo.png" %}" width="30" height="30" class="d-inline-block align-top" alt="">
-        <!-- тег span используется для добавления нужных стилей отдельным участкам текста -->
+{% with request.resolver_match.view_name as view_name %}  
+<header>
+  <nav class="navbar navbar-light" style="background-color: lightskyblue">
+    <div class="container">
+      <a class="navbar-brand" href="{% url 'posts:index' %}">
+        <img src="{% static 'img/logo.png' %}" width="30" height="30" class="d-inline-block align-top" alt="">
         <span style="color:red">Ya</span>tube
       </a>
-      {% if user.is_authenticated %}
-        <a href="{% url "posts:post" %}">Опубликовать пост</a>
-      {% endif %}
+      {# Добавлено в спринте #}
+
+      {% comment %}
+      Меню - список пунктов со стандартными классами Bootsrap.
+      Класс nav-pills нужен для выделения активных пунктов 
+      {% endcomment %}
+      <ul class="nav nav-pills">
+        <li class="nav-item"> 
+          <a class="nav-link {% if view_name  == 'about:author' %}active{% endif %}" href="{% url 'about:author' %}">Об авторе</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link {% if view_name  == 'about:tech' %}active{% endif %}" href="{% url "about:tech" %}">Технологии</a>
+        </li>
+        {% if user.is_authenticated %}
+        <li class="nav-item"> 
+          <a class="nav-link {% if view_name  == 'posts:post' %}active{% endif %}" href="{% url "posts:post" %}">Новая запись</a>
+        </li>
+        <li class="nav-item"> 
+          <a class="nav-link link-light {% if view_name  == 'users:password_change' %}active{% endif %}" href="{% url "users:password_change" %}">Изменить пароль</a>
+        </li>
+        <li class="nav-item"> 
+          <a class="nav-link link-light {% if view_name  == 'users:logout' %}active{% endif %}" href="{% url "users:logout" %}">Выйти</a>
+        </li>
+        <li>
+          Пользователь: <a href="{% url "users:profile" user.pk %}">{% if user.get_full_name %}{{ user.get_full_name }}{% else %}{{ user.username }}{% endif %}</a>
+        </li>
+        {% else %}
+        <li class="nav-item"> 
+          <a class="nav-link link-light {% if view_name  == 'users:login' %}active{% endif %}" href="{% url "users:login" %}">Войти</a>
+        </li>
+        <li class="nav-item"> 
+          <a class="nav-link link-light {% if view_name  == 'users:signup' %}active{% endif %}" href="{% url "users:signup" %}">Регистрация</a>
+        </li>
+        {% endif %}
+      </ul>
+      {# Конец добавленого в спринте #}
     </div>
-    <div>
-      {% if user.is_superuser %}
-        <a href="{% url "admin:index" %}" class="pe-2">Админка</a>
-      {% endif %}
-      {% if user.is_authenticated %}
-        <a href="{% url "users:profil" user.pk %}">
-          {% if user.get_full_name %}
-            {{ user.get_full_name }}
-          {% else %}
-            {{ user.username }}
-          {% endif %}
-        </a>
-        <a href="{% url "users:logout" %}" class="ps-2">Выйти</a>
-      {% else %}
-        <a href="{% url "users:login" %}" class="pe-2">Войти</a>
-        <a href="{% url "users:signup" %}">Зарегистрироваться</a>
-      {% endif %}
-    </div>
-  </div>
-</nav>
+  </nav>      
+</header>
+{% endwith %} 
