--- a/yatube/templates/users/profile.html
+++ b/yatube/templates/users/profile.html
@@ -2,7 +2,7 @@
 {% load user_filters %}
 {% block title %}Профиль{% endblock title %}
 {% block content %}
-<form action="{% url "users:profil" user.pk %}" method="post">
+<form action="{% url "users:profile" user.pk %}" method="post">
 	{% csrf_token %}
   {% for field in form %}
 		<div class="form-group row my-3 p-3">
