--- a/yatube/templates/users/login.html
+++ b/yatube/templates/users/login.html
@@ -54,9 +54,7 @@
           {% endfor %}
           <div class="col-md-6 offset-md-4">
             <button type="submit" class="btn btn-primary">Войти</button>
-            <!-- Тест на внимательность. Без переопределения шаблона этого адреса
-            не существует. Нужно что-то делать, иначе все упадет -->
-            {% comment %}<a href="{% url 'users:password_reset_form' %}" class="btn btn-link">Забыли пароль?</a>{% endcomment %}
+            <a href="{% url 'users:password_reset' %}" class="btn btn-link">Забыли пароль?</a>
           </div>
           </form>
         </div> <!-- card body -->
